Change the name for experiments

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "modxcms/installer",
+  "name": "nextmodx/installer",
   "description": "",
   "keywords": ["modx", "modxcms", "cms", "composer", "installer", "setup"],
 
